--- a/TrinityCreator/QuestPage.xaml
+++ b/TrinityCreator/QuestPage.xaml
@@ -27,7 +27,9 @@
                 <TextBox Text="{Binding EntryId}" DockPanel.Dock="Right" />
             </DockPanel>
             
-            <Button Content="Export to SQL" Click="Button_Click" />
+            <Button Content="Export to database" Click="exportDbBtn_Click" FontWeight="Bold" Margin="2" />
+            <Button Content="Export to SQL file" Click="exportSqlBtn_Click" FontWeight="Bold" Margin="2" />
+            <Button Content="Create new quest" Click="newQuestBtn_Click" Margin="2"/>
         </StackPanel>
 
         <ScrollViewer VerticalScrollBarVisibility="Auto">
