--- a/TrinityCreator/MainWindow.xaml
+++ b/TrinityCreator/MainWindow.xaml
@@ -17,8 +17,9 @@
             </MenuItem>
 
             <MenuItem Header="Info" >
-                <MenuItem Header="Credits" Click="Credits_Click"/>
-                <MenuItem Header="Donate?" Click="WhyDonate_Click" Foreground="Black" />
+                <MenuItem Header="Credits" Click="Credits_Click" />
+                <MenuItem Header="Donate" Click="Donate_Click" />
+                <MenuItem Header="Report bug" Click="ReportBugs_Click" />
             </MenuItem>
         </Menu>
 
