--- a/TrinityCreator/QuestPage.xaml
+++ b/TrinityCreator/QuestPage.xaml
@@ -4,7 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:l="clr-namespace:TrinityCreator"
-             mc:Ignorable="d" Loaded="UserControl_Loaded" d:DesignWidth="700">
+             mc:Ignorable="d" Loaded="UserControl_Loaded" d:DesignWidth="700" MinWidth="655">
     <UserControl.Resources>
         <l:ValueToVisibilityConverter x:Key="ValueVisibilityConverter" />
     </UserControl.Resources>
