--- a/TrinityCreator/Browser.xaml
+++ b/TrinityCreator/Browser.xaml
@@ -4,10 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:TrinityCreator"
-             xmlns:cefSharp="clr-namespace:CefSharp.Wpf;assembly=CefSharp.Wpf"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-    <Grid>
-        <cefSharp:ChromiumWebBrowser x:Name="Chromium" Grid.Row="0" />
-    </Grid>
+    <Grid Name="HostGrid" />
 </UserControl>
