--- a/TrinityCreatorSetup/Product.wxs
+++ b/TrinityCreatorSetup/Product.wxs
@@ -62,6 +62,9 @@
       <Component Id="icudtl.dat">
         <File Id="icudtl.dat" Source="$(var.TrinityCreator.TargetDir)icudtl.dat" KeyPath="yes" />
       </Component>
+      <Component Id="cef.pak">
+        <File Id="cef.pak" Source="$(var.TrinityCreator.TargetDir)cef.pak" KeyPath="yes" />
+      </Component>
       <Component Id="cef_100_percent.pak">
         <File Id="cef_100_percent.pak" Source="$(var.TrinityCreator.TargetDir)cef_100_percent.pak" KeyPath="yes" />
       </Component>
@@ -105,6 +108,7 @@
       <ComponentRef Id="libEGL.dll" />
       <ComponentRef Id="libGLESv2.dll" />
       <ComponentRef Id="icudtl.dat" />
+      <ComponentRef Id="cef.pak" />
       <ComponentRef Id="cef_100_percent.pak" />
       <ComponentRef Id="cef_200_percent.pak" />
       <ComponentRef Id="natives_blob.bin" />
