More work on Model Viewer
- Doubleclick in lookup tool views model
- Show lookup tool opening model viewer
- Show display ID on creature lookup
- Random tips added
- try-catch to prevent failed lookups on notification rows

--- a/TrinityCreator/LookupTool.xaml
+++ b/TrinityCreator/LookupTool.xaml
@@ -26,7 +26,7 @@
                 <Button Name="searchBtn" Content="Search" DockPanel.Dock="Right" Click="searchBtn_Click" IsDefault="True" Width="75"/>
                 <TextBox Name="searchTxt" />
             </DockPanel>
-            <DataGrid Name="dataGrid" IsReadOnly="True" />
+            <DataGrid Name="dataGrid" IsReadOnly="True" MouseDoubleClick="dataGrid_MouseDoubleClick"/>
         </StackPanel>
     </ScrollViewer>
 </UserControl>
