--- a/TrinityCreator/MainWindow.xaml
+++ b/TrinityCreator/MainWindow.xaml
@@ -44,8 +44,8 @@
                 <TabItem Header="Creature (UNFINISHED)"/>
                 <TabItem Header="Loot (UNFINISHED)" />
                 <TabItem Header="Vendor (UNFINISHED)" />
-                <TabItem Header="ModelViewer">
-                    <Frame Name="ModelViewerTab" />
+                <TabItem Header="Model Viewer" Name="ModelViewerTab" Selector.Selected="modelViewerTab_Selected">
+                    <Frame Name="ModelViewerTabFrame" />
                 </TabItem>
                 <TabItem Header="More coming soon!">
                     <DockPanel>
