Work on Creature Creator templates
- Template selection tab can load templates
- Ask before overwriting changes by loading template

--- a/TrinityCreator/CreatureCreatorPage.xaml
+++ b/TrinityCreator/CreatureCreatorPage.xaml
@@ -9,6 +9,9 @@
       Title="CreatureCreatorPage">
 
     <Grid>
-        
+        <DockPanel>
+            <Label Content="Entry Id" DockPanel.Dock="Left" />
+            <TextBox Text="{Binding Entry}" DockPanel.Dock="Right" />
+        </DockPanel>
     </Grid>
 </Page>
